Navbar collapse width fixed.

--- a/react-client/src/components/Navbar/Navbar.css
+++ b/react-client/src/components/Navbar/Navbar.css
@@ -1,5 +1,5 @@
 .navbar {
-    background-color: #de230e;
+    padding: .5rem 1rem 0 1rem;
 }
 .navbar .navbar-brand {
     color: #000000;
@@ -55,6 +55,12 @@
 .navbar .navbar-link:hover {
     color: #000000;
 }
+.nav-tabs {
+    border-bottom: 0;
+}
+.navbar-toggler {
+    margin-bottom: 0.5rem;
+}
 
 @media (max-width: 575px) {
     .navbar-expand-sm .navbar-nav .show .dropdown-menu .dropdown-item {
@@ -107,37 +113,55 @@
         border-radius: .25rem .25rem 0 0;
     }
 }
-@media only (min-width: 1px) and (max-width: 1173px) {
-    .navbar-expand-lgxl .navbar-nav .show .dropdown-menu .dropdown-item {
+@media (min-width: 1213px) and (max-width: 2000px){
+    .navbar-expand-xxl .navbar-nav .show .dropdown-menu .dropdown-item {
         color: #000000;
     }
-    .navbar-expand-lgxl .navbar-nav .show .dropdown-menu .dropdown-item:hover,
-    .navbar-expand-lgxl .navbar-nav .show .dropdown-menu .dropdown-item:focus {
+    .navbar-expand-xxl .navbar-nav .show .dropdown-menu .dropdown-item:hover,
+    .navbar-expand-xxl .navbar-nav .show .dropdown-menu .dropdown-item:focus {
         color: #000000;
     }
-    .navbar-expand-lgxl .navbar-nav .show .dropdown-menu .dropdown-item.active {
-        color: #000000;
-        background-color: #000000;
-    }
-    .navbar .navbar-nav .nav-link {
-        border-radius: .25rem .25rem;
-    }
-}
-
-@media (min-width: 1174px) and (max-width: 1199px) {
-    .navbar-expand-xl .navbar-nav .show .dropdown-menu .dropdown-item {
-        color: #000000;
-    }
-    .navbar-expand-xl .navbar-nav .show .dropdown-menu .dropdown-item:hover,
-    .navbar-expand-xl .navbar-nav .show .dropdown-menu .dropdown-item:focus {
-        color: #000000;
-    }
-    .navbar-expand-xl .navbar-nav .show .dropdown-menu .dropdown-item.active {
+    .navbar-expand-xxl .navbar-nav .show .dropdown-menu .dropdown-item.active {
         color: #000000;
         background-color: #000000;
     }
     .navbar .navbar-nav .nav-link {
         border-radius: .25rem .25rem 0 0;
+    }
+
+
+    .navbar-expand-xxl {
+        flex-flow: row nowrap;
+        -ms-flex-pack: start;
+        justify-content: flex-start;
+    }
+    .navbar-expand-xxl .navbar-nav {
+        -ms-flex-direction: row;
+        flex-direction: row;
+    }
+    .navbar-expand-xxl .navbar-nav .dropdown-menu {
+        position: absolute;
+    }
+    .navbar-expand-xxl .navbar-nav .nav-link {
+        padding-right: 0.5rem;
+        padding-left: 0.5rem;
+    }
+    .navbar-expand-xxl > .container,
+    .navbar-expand-xxl > .container-fluid,
+    .navbar-expand-xxl > .container-sm,
+    .navbar-expand-xxl > .container-md,
+    .navbar-expand-xxl > .container-lg,
+    .navbar-expand-xxl > .container-xl {
+        -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+    }
+    .navbar-expand-xxl .navbar-collapse {
+        display: -ms-flexbox !important;
+        display: flex !important;
+        flex-basis: auto;
+    }
+    .navbar-expand-xxl .navbar-toggler {
+        display: none;
     }
 }
 
@@ -153,9 +177,17 @@
     background-color: #000000;
 }
 
+@media only screen and (min-width: 1213px) {
+    .navbar .navbar-nav .nav-link,
+    .navbar .navbar-brand{
+        padding-bottom: 1rem;
+    }
+    .navbar .form-inline {
+        padding-bottom: 0.5rem;
+    }
 
+}
 .nav-wrapper{
-    background-color: #de230e;
     color: black;
 
 }
